src/objects/Payment_Mapping__mdt.object
<CustomObject>
	<fields>
		<fullName>Agency_Id__c</fullName>
		<description>The identifier for the Department of Commerce, according to the payment processor.</description>
		<inlineHelpText>The identifier for the Department of Commerce, according to the payment processor.</inlineHelpText>
		<label>Agency Id</label>
		<length>30</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Completion_Endpoint__c</fullName>
		<description>The URL used to make a callout and complete a payment.</description>
		<inlineHelpText>The URL used to make a callout and complete a payment.</inlineHelpText>
		<label>Completion Endpoint</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Event_Remote_Account__c</fullName>
		<description>The remote account name for an Event payment.</description>
		<inlineHelpText>The remote account name for an Event payment.</inlineHelpText>
		<label>Event Remote Account</label>
		<length>30</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Privacy_Shield_Remote_Account__c</fullName>
		<description>The remote account name for a Privacy Shield payment.</description>
		<inlineHelpText>The remote account name for a Privacy Shield payment.</inlineHelpText>
		<label>Privacy Shield Remote Account</label>
		<length>30</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Query_Endpoint__c</fullName>
		<description>The URL used to query for information about a payment.</description>
		<inlineHelpText>The URL used to query for information about a payment.</inlineHelpText>
		<label>Query Endpoint</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Redirect_URL__c</fullName>
		<description>The URL to which a user is redirected, allowing them to enter payment information.</description>
		<inlineHelpText>The URL to which a user is redirected, allowing them to enter payment information.</inlineHelpText>
		<label>Redirect URL</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Refund_Endpoint__c</fullName>
		<description>The URL used in a callout to refund a credit card payment.</description>
		<inlineHelpText>The URL used in a callout to refund a credit card payment.</inlineHelpText>
		<label>Refund Endpoint</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Service_Remote_Account__c</fullName>
		<description>The remote account name for a Service payment.</description>
		<inlineHelpText>The remote account name for a Service payment.</inlineHelpText>
		<label>Service Remote Account</label>
		<length>30</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Token_Endpoint__c</fullName>
		<description>The endpoint used to make a callout to get a token for a payment.</description>
		<inlineHelpText>The endpoint used to make a callout to get a token for a payment.</inlineHelpText>
		<label>Token Endpoint</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<label>Payment Mapping</label>
	<pluralLabel>Payment Mappings</pluralLabel>
</CustomObject>